# filecryptor-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: cli.rs  filecrypt.rs  lib.rs  secrets.rs
src/commands/: decrypt.rs  encrypt.rs  hex.rs  mod.rs
